[tool.poetry]
name = "beaker-smart-asa"
version = "0.1.0"
description = "Implementation of Beaker contracts compliant with ARC-0020"
authors = ["Giorgio Ciotti"]
license = "MIT"
readme = "README.md"
packages = [{include = "beaker_smart_asa"}]

[tool.poetry.dependencies]
python = "^3.10"
beaker-pyteal = "^0.4.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.7"
mypy = "^0.991"
pytest = "^7.2.0"
autoflake = "^2.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
